docs/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');

@import url('pygments.css');

@media screen and (min-width: 966px) { /* desktop */
}
@media screen and (max-width: 966px) { /* mobile/tablet all */
}
@media screen and (max-width: 768px) { /* mobile medium (/tablet) */
}
@media screen and (max-width: 480px) { /* mobile small */
}

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #06A5FA;
  --ifm-color-primary-dark: #008fdb;
  --ifm-color-primary-darker: #0068a0;
  --ifm-color-primary-darkest: #00507a;
  --ifm-color-primary-light: rgb(70, 203, 174);
  --ifm-color-primary-lighter: rgb(102, 212, 189);
  --ifm-color-primary-lightest: rgb(146, 224, 208);
  --ifm-code-font-size: 95%;
  --ifm-link-color: #06A5FA;
  --ifm-link-hover-color: #06A5FA;
  --ifm-navbar-background-color: #202124;
  --ifm-navbar-link-color: #999999;
  --ifm-navbar-link-hover-color: #fff;
  --ifm-menu-color-active: #06A5FA;
  --ifm-navbar-height: 80px; /* Fixes issue with internal links hiding under navbar */
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

html[data-theme='light'] .DocSearch {
  --docsearch-primary-color: var(--ifm-color-primary);
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(94, 100, 112, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
  /* Search box */
  --docsearch-searchbox-background: #fff;
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}
html[data-theme='light'] .DocSearch-Button:hover {
  box-shadow: inset 0 0 0 2px #999;
}

html[data-theme='dark'] .DocSearch {
  --docsearch-primary-color: var(--ifm-color-primary);
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(47, 55, 69, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-background-color);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-emphasis-100);
  /* Footer */
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: linear-gradient(
    -26.5deg,
    var(--ifm-color-emphasis-200) 0%,
    var(--ifm-color-emphasis-100) 100%
  );
}

/**
 * Hide the "See all ## results" link at the bottom of the search widget. 
 * See https://github.com/facebook/docusaurus/issues/5084 for context.
 */
 .DocSearch-Dropdown-Container .DocSearch-HitsFooter {
  display: none;
}
.DocSearch-Dropdown-Container {
  padding-bottom: var(--docsearch-spacing);
}

@media (max-width: 996px) {
  .navbar-sidebar .navbar__item {
    display: block !important;
  }
}

.navbar-sidebar .activeDocsMenu ul {
  margin-left: 16px;
}
.navbar-sidebar h2.activeDocsSection {
  font-size: 18px;
  margin: 16px 0 16px 16px;
}

.navbar__item.navbar__link.go-homepage::after {
  content: '\29C9';
  margin: 0 3px 0 5px;
}

.footer {
  padding: 10px;
  text-align: center;
}

@media (min-width: 1440px) {
  .footer .container {
    max-width: 960px;
  }
}

.footer__item {
  display: inline-block;
  margin: 0 10px;
  font-size: 0.8em;
}

.footer__copyright {
  font-size: 0.9em;
  color: rgb(100, 100, 100);
}

/** DOCS - Overall **/

/* EditThisPage footer: full width & grey */
div.docs-wrapper footer {
  padding: 20px 0;
  text-align: left;
  background-color: #F5F6F7;
  color: #606770;
}
div.docs-wrapper footer div.col:nth-child(2) {
  display: none;
}

.table-of-contents__link:hover, .table-of-contents__link:hover code, .table-of-contents__link--active, .table-of-contents__link--active code {
  color: #06A5FA;
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  /*noinspection CssUnresolvedCustomProperty*/
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  /*noinspection CssUnresolvedCustomProperty*/
  padding: 0 var(--ifm-pre-padding);
}

.docs-wrapper img {
  display: block;
  margin: 20px auto;
}

@media screen and (min-width: 1440px) { /* desktop large */
  .img-s {
    max-width: 25%;
  }
  .img-m {
    max-width: 50%;
  }
  .img-l {
    max-width: 75%;
  }
  .img-xl {
    max-width: 100%;
  } 
}

/** DOCS - Modeling **/

/* Hide/show anchors on auto-generated modeling docs */
.sphinxAnchor:hover > a.headerlink {
  display: inline-block;
  margin-left: 5px;
}
.sphinxAnchor .headerlink {
  display: none;
}
.reference:hover > a.headerlink {
  display: inline-block;
}
.reference .headerlink {
  display: none;
}

/* Remove bottom margin for content in auto-generated admonitions */
.admonition>:last-child {
  margin-bottom: 0;
}

/* Summary table */
.autosummary {
  margin-bottom: 60px;
}
.autosummary p {
  margin-bottom: 0;
}

/* Heading for a page with classes */
p.rubric {
  font-size: 24px;
  font-weight: bold;
  margin: 24px 0;
}

/* Class element */
dl.class {
  margin: 40px 0 100px 0;
  border-top: 1px solid var(--ifm-font-color-base);
  padding-top: 40px;
}
/* Class heading */
dl.class dt.sig {
  font-weight: bold;
  font-size: 20px;
  margin: 0 0 0.5em 0;
}
/* Class heading - type (=class) */
dl.class .property .pre {
  font-size: 14px;
  color: var(--ifm-font-color-light);
}
/* Class heading - class name */
dl.class .descname {
  font-family: 'Roboto Mono';
}

/* Class heading - function parameters */
dl.class dl.property .property .pre, dl.class dl.property .descname .pre, dl.class dl.property .descname .viewcode-link {
  font-size: 18px;
  text-transform: none;
}
.sig-paren, .sig-param, .sig-return {
  font-size: 14px;
  font-weight: normal;
  color: var(--ifm-font-color-light);
}
/* Class - properties & attributes */
dl.class .property, dl.class .property dt.sig, dl.class .attribute, dl.class .attribute dt.sig {
  font-style: normal;
  font-weight: normal;
  margin-top: 40px;
  font-size: 18px;
}
dl.class dl.property .pre, dl.class dl.attribute .pre {
  color: #000;
}
dl.class dl.attribute .pre {
  font-style: italic;
}
/* Class - properties - override class heading breaks (keep on one line) */
dl.class dl.property .pre::after, dl.class dl.property .descname::after, dl.class dl.attribute .pre::after, dl.class dl.attribute .descname::after {
  content: "";
  white-space: normal;
}

/* Class & function headings - function parameters - link to source & permalink */
dl.class .reference, dl.class .headerlink, dl.function .reference, dl.method .reference {
  font-size: 14px;
  font-weight: normal; 
}

/* Functions (in classes) */
dl.method, dl.function {
  margin-top: 40px;
}
/* Function content */
dl.method dd, dl.function dd {
  margin-inline-start: 40px;
}
/* Function content heading */
dl.method dt, dl.function dt {
  font-weight: bold;
}
/* Function fields (e.g. parameters or notes) */
dl.method .field-list dd, dl.function .field-list dd {
  margin-inline-start: 0;
}
dl.method .field-list dd strong, dl.function .field-list dd strong {
  font-family: 'Roboto Mono';
  font-weight: normal;
  font-style: italic;
}
dl.method dd blockquote, dl.function dd blockquote {
  border: none;
}
/* Function - function namespace (do not show) */
dl.function .descname {
  font-family: 'Roboto Mono';
  font-size: 20px;
}
dl.function .descclassname {
  display: none;
}

span.viewcode-link {
  float: right;
}

/* Content of a class or function */
dd {
  margin-inline-start: 0;
  font-size: 16px;
}

dl blockquote {
  padding: 0 0.5em;
}

/** DIAGRAM (MERMAID) MARKUP **/

.mermaid {
  text-align: center;
}
/* Fixes large margins top and bottom */
.mermaid svg {
  height: auto;
}

.diagram-caption {
  font-style: italic;
  font-size: 0.8em;
  text-align: center;
}

 /* HACK: use '!important' as a workaround for styling not being applied to nodes: 
  https://github.com/mermaid-js/mermaid/issues/1649 */
.diagram-basic rect {
  fill: #fff !important;
  stroke: black !important;
}
.hover .diagram-basic rect, .diagram-basic .hover rect {
  fill: rgb(212, 212, 212) !important;
}  
.diagram-blue rect {
  fill: #EAF9FE !important;
  stroke: #64C8FA !important;
}
.hover .diagram-blue rect, .diagram-blue .hover rect {
  fill: #ABE9FE !important;
  stroke: #006496 !important;
}
.diagramActive rect {
  fill: #ABE9FE !important;
  stroke: #006496 !important;
}
.diagram-pink rect {
  fill: #fba99dff !important;
  stroke: rgb(200, 50, 25) !important;
}
.hover .diagram-pink rect, .diagram-pink .hover rect {
  fill: rgb(255, 150, 125) !important;
}
.diagram-yellow rect {
  fill: #fef284ff !important;
  stroke: rgb(150, 133, 0) !important;
}
.hover .diagram-yellow rect, .diagram-yellow .hover rect {
  fill: rgb(255, 243, 81) !important;
}
.mermaid .edgeLabel {
  background-color: rgb(200, 200, 200) !important;
}
.mermaid .edgeLabel rect {
  fill: rgb(200, 200, 200) !important;
  stroke: none !important;
}

/** LIGHTBOX MARKUP **/
/* animation */

@keyframes anvil {
  0% {
    transform: scale(1) translateY(0px);
    opacity: 0;
    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
  }
  1% {
    transform: scale(0.96) translateY(10px);
    opacity: 0;
    box-shadow: 0 0 0 rgba(241, 241, 241, 0);
  }
  100% {
    transform: scale(1) translateY(0px);
    opacity: 1;
    box-shadow: 0 0 500px rgba(241, 241, 241, 0);
  }
}

.sphinxAnchor {
  scroll-margin-top: calc(var(--ifm-navbar-height) + 0.5rem);
}

a.headerlink {
  display: none;
}

